[gd_scene load_steps=5 format=3 uid="uid://wm20d5epi3ac"]

[ext_resource type="Script" uid="uid://mo66wcw7psb8" path="res://scenes/menu/options_menus/options_menu.gd" id="1_1hy57"]
[ext_resource type="Theme" uid="uid://dwlxe2w7oyyuk" path="res://assets/themes/main_titles.tres" id="2_gm2gu"]
[ext_resource type="PackedScene" uid="uid://ch6i2pe41dxxn" path="res://scenes/menu/options_menus/settings_tab_container.tscn" id="3_gm2gu"]
[ext_resource type="Theme" uid="uid://tt3lcvk2vksd" path="res://assets/themes/button_theme.tres" id="3_ilbgr"]

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hy57")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.936453, 0.726902, 0.813002, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Seperator" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -30

[node name="Label" type="Label" parent="MarginContainer/Seperator"]
layout_mode = 2
theme = ExtResource("2_gm2gu")
theme_override_font_sizes/font_size = 0
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsTabContainer" parent="MarginContainer/Seperator" instance=ExtResource("3_gm2gu")]
layout_mode = 2
size_flags_vertical = 3

[node name="Back_Button" type="Button" parent="MarginContainer/Seperator"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_ilbgr")
text = "Back"

[connection signal="pressed" from="MarginContainer/Seperator/Back_Button" to="." method="_on_back_button_pressed"]
